[improve] Latest improvements